data/qemu/v0/STATS.md
# qemu extraction stats

| Stage | Survived | % of candidates | Dropped here |
|---|---:|---:|---:|
| candidates | 40309 | 100.0% | 0 |
| not merge | 38021 | 94.3% | 2288 |
| not revert | 37840 | 93.9% | 181 |
| has reference | 2889 | 7.2% | 34951 |
| has gold files | 2383 | 5.9% | 506 |
| 1-5 gold files | 2367 | 5.9% | 16 |
| has problem statement | 2367 | 5.9% | 0 |

## Run

- **instances written**: 2367
- **files**: instances.jsonl
- **problem statement names a gold path / basename / patched function**: path: 209 (8.8%), basename: 261 (11.0%), function: 749 (31.6%)
- **upstream**: qemu/qemu
- **upstream HEAD**: ff1d2d19d7e24893e2012d879f8e73077e17b9bd
- **since**: 2022-01-01
- **extractor commit**: 4c23dfef71d5169d1898427ec8f2a8b36d6d42e8
- **extractor version**: 0.1.0
- **problem source**: commit_message
- **problem statement drops**: {}
- **github token**: none
